test/tests/stages/13_floating-point_numbers/valid/libraries/use_arg_after_fun_call_client.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[2]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: fun
        List[1]: 
          TIdentifier: x
        None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[1]: 
            Double: 
          Double: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[1]: 
            CS: 
              CReturn: 
                CFunctionCall: 
                  TIdentifier: fun
                  List[1]: 
                    CConstant: 
                      CConstDouble: 
                        TDouble: 1.000000
                      None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
