test/tests/stages/13_floating-point_numbers/invalid_types/extra_credit/bitwise_xor.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[1]: 
            CS: 
              CReturn: 
                CBinary: 
                  CBitXor: 
                  CConstant: 
                    CConstDouble: 
                      TDouble: 10000000000.000000
                    None: 
                  CUnary: 
                    CNegate: 
                    CConstant: 
                      CConstDouble: 
                        TDouble: 10000000000.000000
                      None: 
                    None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
